FreeST/test/Programs/InvalidTests/ParseErrors/dupConsChan/dupConsChan.fst

data T = A | B

type C = &{A: Skip, B: Skip}